<resources>
    <string name="app_name">Playlist maker</string>
    <string name="main_search_btn">Поиск</string>
    <string name="main_media_library_btn">Медиатека</string>
    <string name="main_settings_btn">Настройки</string>
    <string name="settings_theme_text">Темная тема</string>
    <string name="settings_share_app_text">Поделиться приложением</string>
    <string name="settings_write_to_support_text">Написать в поддержку</string>
    <string name="settings_terms_of_use_text">Пользовательское соглашение</string>
    <string name="main_search_btn_toast_text">Нажата кнопка поиска</string>
    <string name="main_library_btn_toast_text">Нажата кнопка библиотеки</string>
    <string name="main_settings_btn_toast_text">scdcd</string>
    <string name="extra_text_for_send" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="extra_mail" translatable="false">ya.sboevandrey@yandex.ru</string>
    <string name="extra_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="extra_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_uri" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="edittext_hint"><font size="15" weight="400">Поиск</font></string>
    <string name="refresh_button_text">Обновить</string>
    <string name="nothing_found_text">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="collection_name">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="genre">Жандр</string>
    <string name="country">Страна</string>
    <string name="_0_30">0:30</string>
    <string name="_0_00" translatable="false">0:00</string>
    <string name="media_library_title">Медиатека</string>
    <string name="play_list_error_text">Вы не создали\nни одного плейлиста</string>
    <string name="play_lists_button_text">Новый плейлист</string>
    <string name="featured_tracks_error_text">Ваша медиатека пуста</string>
    <string name="tab_layout_featured_tracks_title">Избранные треки</string>
    <string name="tab_layout_playlists_title">Плейлисты</string>
    <string name="new_playlist_title_text">Новый плейлист</string>
    <string name="name_edittext_tint">Название*</string>
    <string name="description_edittext_tint">Описание</string>
    <string name="create_button_text">Создать</string>
    <string name="new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_positive_button_text">Да</string>
    <string name="dialog_negative_button_text">Нет</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="playlist_one_track_count">1 трек</string>
    <string name="playlist_less_than_5_tracks_count">%1$s трека</string>
    <string name="playlist_tracks_count">%1$s треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist_text">Добавлено в плейлист %1$s</string>
    <string name="already_been_added_to_the_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="tracks_duration">%1$s минут \u00B7 </string>
    <string name="one_minute_tacks_duration">"%1$s минута \u00B7 "</string>
    <string name="less_than_5_minutes_tacks_duration">"%1$s минуты \u00B7 "</string>
    <string name="track_delete_dialog_message">Хотите удалить трек?</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="share">Поделиться</string>
    <string name="playlist_delete_dialog_message">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="edit_fragment_title_text">Редактировать</string>
    <string name="edit_fragment_save_button_text">Сохранить</string>
    <string name="empty_list_message_text">В этом плейлисте нет треков.</string>
    <string name="playlist_share_error_text">Нет списка треков, которым можно поделиться.</string>
</resources>