<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/MainScreenBackgroundStyle"
    tools:context="a.sboev.ru.playlistmaker.MainFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="4dp">

        <TextView style="@style/MainScreenTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:paddingBottom="28dp"
        android:orientation="vertical">

        <Button style="@style/MainScreenButtonsStyle"
            android:id="@+id/search_btn"
            android:text="@string/main_search_btn"
            app:icon="@drawable/ic_search"/>

        <Button style="@style/MainScreenButtonsStyle"
            android:id="@+id/library_btn"
            android:text="@string/main_media_library_btn"
            app:icon="@drawable/ic_library" />

        <Button style="@style/MainScreenButtonsStyle"
            android:id="@+id/settings_btn"
            android:text="@string/main_settings_btn"
            app:icon="@drawable/ic_settings"/>

    </LinearLayout>

</LinearLayout>