<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="a.sboev.ru.playlistmaker.settings.ui.SettingsFragment"
    style="@style/SettingsScreenBackgroundStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal">

        <TextView style="@style/SettingsScreenTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/medium_padding"
            android:text="@string/main_settings_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/small_padding"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_theme_text"/>

            <com.google.android.material.switchmaterial.SwitchMaterial style="@style/SettingsScreenSwitchStyle"
                android:id="@+id/themeSwitcher"
                android:layout_marginVertical="11dp"
                android:layout_gravity="end"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_share_app_text"/>

            <ImageView style="@style/SettingsScreenMenuIconsStyle"
                android:src="@drawable/ic_share"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/write_to_support_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_write_to_support_text"/>

            <ImageView style="@style/SettingsScreenMenuIconsStyle"
                android:src="@drawable/ic_support_light"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/terms_of_use_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_terms_of_use_text"/>

            <ImageView style="@style/SettingsScreenMenuIconsStyle"
                android:src="@drawable/ic_arrow_forward"/>

        </FrameLayout>


    </LinearLayout>
</LinearLayout>