<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    style="@style/SettingsScreenBackgroundStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal">

        <ImageView style="@style/SettingsScreenBackgroundStyle"
            android:id="@+id/arrow_back"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/small_padding"
            android:src="@drawable/ic_arrow_back"/>

        <TextView style="@style/SettingsScreenTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/medium_padding"
            android:text="@string/main_settings_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/small_padding"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_theme_text"/>

            <androidx.appcompat.widget.SwitchCompat style="@style/SettingsScreenSwitchStyle"
                android:layout_marginVertical="11dp"
                android:layout_gravity="end"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_share_app_text"/>

            <ImageView style="@style/SettingsScreenMenuIconsStyle"
                android:src="@drawable/ic_share"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_write_to_support_text"/>

            <ImageView style="@style/SettingsScreenMenuIconsStyle"
                android:src="@drawable/ic_support_light"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsScreenMenuTextStyle"
                android:text="@string/settings_terms_of_use_text"/>

            <ImageView style="@style/SettingsScreenMenuIconsStyle"
                android:src="@drawable/ic_arrow_forward"/>

        </FrameLayout>


    </LinearLayout>
</LinearLayout>