<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LibraryScreenBackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/new_playlist_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/NewPlaylistScreenBackgroundStyle">

        <TextView
            style="@style/LibraryScreenTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist_title_text"/>
    </Toolbar>

    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_312dp"
        android:layout_marginTop="@dimen/_26dp"
        android:background="@drawable/playlist_cover_background"
        android:src="@drawable/ic_add_photo"
        android:scaleType="centerInside"
        android:layout_marginHorizontal="@dimen/_24dp"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_toolbar"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>



    <EditText
        style="@style/new_playlist_edittext_style"
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:layout_marginTop="@dimen/_32dp"
        android:hint="@string/name_edittext_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover" />

    <TextView
        style="@style/new_playlist_edittext_title_style"
        android:id="@+id/name_edittext_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_edittext_tint"
        android:layout_marginStart="@dimen/medium_padding"
        android:textSize="@dimen/_12sp"
        android:padding="@dimen/four_dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/name_edittext"
        app:layout_constraintBottom_toTopOf="@id/name_edittext"
        app:layout_constraintStart_toStartOf="@id/name_edittext"/>

    <EditText
        style="@style/new_playlist_edittext_style"
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:layout_marginTop="@dimen/_17dp"
        android:hint="@string/description_edittext_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edittext" />

    <TextView
        style="@style/new_playlist_edittext_title_style"
        android:id="@+id/description_edittext_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_edittext_tint"
        android:padding="@dimen/four_dp"
        android:layout_marginStart="@dimen/medium_padding"
        android:textSize="@dimen/_12sp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/description_edittext"
        app:layout_constraintBottom_toTopOf="@id/description_edittext"
        app:layout_constraintStart_toStartOf="@id/description_edittext"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:text="@string/create_button_text"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="16sp"
        android:gravity="center"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/create_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>